<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_label">Dream Title</string>
    <string name="dream_title_hint">Dream Title Hint</string>
    <string name="dream_journey_label">Dream Journey</string>
    <string name="dream_solved_label">Dream Solved Label</string>
    <string name="dream_title">Dream Title</string>
    <string name="dream_date">Dream Date</string>
    <string name="realized_dream_content_description">Image for Realized Dream</string>
    <string name="deferred_dream_content_description">Image for Deferred Dream</string>
    <string name="realized_checkbox">Realized</string>
    <string name="deferred_checkbox">Deferred</string>
    <string name="dialog_hint">New Dream Entry</string>
    <string name="new_dream">New Dream</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d dreams</string>
    <string name="add_comment_title">Add Comment</string>
    <string name="need_title_title">Need a Title!</string>
    <string name="need_title_message">Please add a title</string>
    <string name="share_dream">Share</string>
    <string name="dream_share">%1$s!
        The dream was revealed on %2$s. %3$s
    </string>
    <string name="dream_share_realized">The dream was realized on %s.</string>
    <string name="dream_share_deferred">The dream was deferred on %s.</string>
    <string name="dream_share_active">The dream is still active.</string>
    <string name="dream_share_subject">Dreamcatcher Dream Share</string>
    <string name="dream_share_send">Share your dream with</string>
    <string name="display_photo_title">Dream Photo</string>
    <string name="display_photo_content">Dream Photo</string>
    <string name="take_picture">Take Picture</string>
</resources>
