<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/dream_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/dream_head_picture_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp">


            <ImageView
                android:id="@+id/dream_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/black"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <ImageButton
                android:id="@+id/dream_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dream_head_text_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dream_title_label" />

            <EditText
                android:id="@+id/dream_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dream_title_hint" />

        </LinearLayout>


    </LinearLayout>


    <CheckBox
        android:id="@+id/dream_realized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realized_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/dream_deferred"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_head_layout" />

    <CheckBox
        android:id="@+id/dream_deferred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/deferred_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dream_realized"
        app:layout_constraintTop_toBottomOf="@+id/dream_head_layout" />


    <TextView
        android:id="@+id/textView2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dream_journey_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dream_realized" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/entry_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_comment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


</android.support.constraint.ConstraintLayout>